--- a/templates/layout.html
+++ b/templates/layout.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>{{title}}</title>
+        <link rel='stylesheet' href='/style.css' type='text/css' media='screen' />
     </head>
     <body>
         <div id='content'>
