Fix error on sheet editing

--- a/templates/edit.html
+++ b/templates/edit.html
@@ -46,7 +46,7 @@
     <fieldset id='addresses'>
         <legend>Addresses</legend>
         <ul>
-            {{#adresses}}
+            {{#addresses}}
             <li>
             <dl class='address-list'>
                 <dt>Name</dt>
@@ -61,7 +61,7 @@
                 <dd><input type='text' size='10' name='person[addresses][][country]' value='{{country}}' /></dd>
             </dl>
             </li>
-            {{/adresses}}
+            {{/addresses}}
             <li>
             <dl class='address-list'>
                 <dt>Name</dt>
