--- a/templates/edit.html
+++ b/templates/edit.html
@@ -1,4 +1,4 @@
-<h1>{{title}}</h1>
+<h1>{{new_or_edit}} {{name}}</h1>
 <form action='{{action}}' method='post'>
     <fieldset>
         <legend>Details</legend>
