Make the collection used configurable
Also, admit we're dealing primarily with people here, not addresses

--- a/black_book/templates/index.html
+++ b/black_book/templates/index.html
@@ -1,6 +1,6 @@
 <h1>{{title}}</h1>
 <ul>
-    {{#addresses}}
+    {{#people}}
     <li><a href='/{{page}}'>{{name}}</a></li>
-    {{/addresses}}
+    {{/people}}
 </ul>
