--- a/black_book/templates/layout.html
+++ b/black_book/templates/layout.html
@@ -8,5 +8,7 @@
         <div id='content'>
             {{{yield}}}
         </div>
+        <script type='text/javascript' src='/jquery-1.4.2.min.js' ></script>
+        <script type='text/javascript' src='/black-book.js' ></script>
     </body>
 </html>
